--- a/BasicInformation/とにかく.md
+++ b/BasicInformation/とにかく.md
@@ -188,11 +188,166 @@ $= 128ビット/秒$
 
 ---
 
-漠然と数をこなすよりは、1つ1つ納得しながら解けるのがいい。  
-まぁ、このやり方の欠点は時間がかかる事なんですけどね。  
+## エンタープライズアーキテクチャ
+
+基本も応用もエンタープライズ大好きだからな。  
+データアーキテクチャだけは覚えた。  
+応用の時、これで間違えたから  
+他3つを覚えられれば俺の勝ちだが、そもそもこいつって何なの？ってのはよくわかっていない。  
+まぁ、試験なんてそんなもんだよね。  
+
+企業の業務やシステム改善のためのフレームワーク。  
+まぁ、ここまで要約すればそのままとしか言いようがないよな。  
+
+企業向けのアーキテクチャ何だから、ビジネスがあり・・・。
+というか、業務アプリケーション準拠で考えればいいだけの話では？
+データはデータベース。アプリケーションはそのままソフト。
+後はそれをどうやって実現するのかという技術全般がテクノロジーになるわけで、後は企業なんだからどういうビジネスしてるかで終わる話だと思うけどなぁ。
+
+各業務と情報システムを，ビジネス，データ，アプリケーション，テクノロジの四つの体系で分析し，全体最適化の観点から見直すための技法である。
+
+**ビジネスアーキテクチャ**  
+業務の内容についてまとめたもの  
+
+**アプリケーションアーキテクチャ**  
+業務に沿った最適なシステムについてまとめたもの  
+
+**データアーキテクチャ**  
+業務上の最適なデータについて  
+
+**テクノロジーアーキテクチャ**  
+システムを構築する差異のもろもろの技術についてまとめた物。(ハードソフト含む)
+
+うーん。アプリケーション作る時に考えることそのままじゃないか・・・。  
+覚えてしまえばなんてことはないな。  
+
+---
+
+## リスク(脅威と好機)
+
+これもよく出る。
+リスクよりもリスクとチャンスだよな。  
+リスクを基準に対比して考えればいいのではないか？  
+
+リスクは絶対に回避したいけど、チャンスは絶対に受け入れたい(回避と活用)
+リスクは他人のせいにしたいけど、チャンスは他人に分け与えて置けば後々いいことになるかな(転嫁と共有)
+リスクは出来れば軽減したいけど、チャンスはもっと儲かるようにしたい(軽減と強化)
+リスク対策するより受け入れたほうが安上がり、まぁ、とりあえずいいことは受け入れておく？(受容)
+
+PMBOKによればプロジェクトにマイナスの影響を与えるリスク(脅威)への対応戦略には「回避」「転嫁」「軽減」「受容」の4種類があります。
+
+**回避**
+リスクそのものの除去や、プロジェクトのスコープや目標を縮小・変更するなどしてリスクの影響をゼロにする戦略。
+
+**転嫁**
+リスクのある業務・作業のアウトソーシングや、損害保険の契約によってリスクによるマイナスの影響を第三者へ移転する戦略。
+
+**軽減**
+リスクの影響範囲を狭くしたり、発生確率を低減したりする戦略。
+
+**受容**
+リスクが現実化した時の影響が許容可能範囲内である場合やリスクの除去が困難であるときに、特に対策をせずにそのままにしておく戦略。対策費用が予想される損失金額を上回っているときなどに採られる。
 
 
-tilを始めたときは1日1つ新しい事を学べればいいや程度だったけど、今やそれ以上を求めるようになってしまった。
-1日1つじゃ全く足りない。
-新しい事以外にも、過去にやって忘れてしまった奴も復習しないといけないから、1つではどうしようもないのだ。
+逆にプロジェクトにプラスの影響を与えるリスク好機(好機)への対応戦略にも「活用」「共有」「強化」「受容」の4種類があります。
+
+**活用**
+好機が確実に到来するように、顕在化の不確実性を取り除くための戦略。
+
+**共有**
+好機を得られる能力の高い第三者にプロジェクトの実行権限の一部、または全部を与える戦略。
+
+**強化**
+好機のプラスの影響を増加させたり、その発生確率を高めたりする戦略。
+
+**受容**
+積極的な利用はしないが、好機が実現したときにはその利益を享受しようとする戦略。対策費用が予想される利得を上回っているときなどに採られる。
+
+---
+
+## リスク対応
+
+内容は上でやったやつを大分類で囲ったような感じだな。  
+正直これくらいなら分けないで欲しい。  
+
+リスクを回避したり他人のせいにするのはリスクをコントロールすることになるよね。  
+リスクの軽減のために投資をしたり、保険を掛けたり、とにかく金で何とかしようとするのがファイナンス(金に関する色々)  
+ジタバタ動くより、受け入れたほうが安上がりじゃね？な受容  
+正直、リスクで取り得る戦略なんてこれくらいしかないような？  
+とにかく汚く暴力的に考えるんだ。  
+
+リスク分析・リスク評価の結果明らかになったリスクに対応方法を講じることです。リスク対応では、リスクの大きさ、顕在化の可能性、情報資産の重要度、予算などを踏まえて最適な対応策をとることが重要となります。
+
+**リスクコントロール**
+潜在的なリスクに対して、リスクを回避したり低減したりする対策を講じること。リスク回避・リスク低減・リスク移転などがある。
+
+**リスクファイナンス**
+リスクが顕在化した場合に備えて、損失の補てんや対応のための資金確保策を講じること。
+
+**リスク受容**
+リスクの損失額や顕在化の可能性が低いため、予算などとの兼ね合いからあえて対処を行わないこと。
+
+---
+
+## バランススコアカード(Balanced Score Card、BSC)
+
+これもよく出るよねー。  
+だからここにまとめてるんだけど。  
+正直なんで財務、顧客、プロセス、学習と成長の視点から業績を判断できるかわからない。
+
+あー。ヒト、モノ、カネ＋キャク。  
+これで十分だ。ヒトは育成するので、学習。金と客はわかる。
+モノは消去法でプロセスだ。要は今あるものを最大限活用→プロセスの改善という意味でモノらしい。  
+
+調べてみたけど、要はどうやったら儲かるかってのを整理するための視点見たいね。  
+金をうまくやりくり出来ても、プロセスを改善してコストダウン出来ても、顧客を見方に付けて収益をアップしても、  
+人を育成してイノベーションをもたらしても、儲かるわけなので、じゃあ今どんな状況なのってのを考えるために作り出されたものっぽい。  
+そこまで調べてもなんでこの4つなのかはわからないけどねー。  
+とりあえず、これに関してはこれくらいでいいかなー。  
+
+企業のビジョンと戦略を実現するために、「財務」「顧客」「内部ビジネスプロセス」「学習と成長」という4つの視点から業績を評価・分析する手法です。
+なぜか学習は覚えている。  
+
+**財務の視点**  
+株主や従業員などの利害関係者の期待に応えて良い業績を出すために、財務的にどのように行動すべきかの指標を設定する。  
+
+**顧客の視点**  
+企業のビジョンを達成するために、顧客に対してどのように行動すべきかの指標を設定する。  
+
+**内部ビジネスプロセス(業務プロセス)の視点**  
+財務的目標の達成や顧客満足度を向上させるために、優れた業務プロセスを構築するための指標を設定する。  
+
+**学習と成長の視点**  
+企業のビジョンを達成するために、組織や個人としてどのように変化（改善）し能力向上を図るかの指標を設定する。  
+
+---
+
+## システム管理基準
+
+全体最適化計画とか開発計画とか、ここら辺の区切りがあいまい何だよな。  
+選択肢に全体最適化計画ってあったらそれを選びたくなるし、毎回この答えは出てくるのでまとめる必要がある。  
+
+とりあえず全体最適の意味から。  
+
+**全体最適**  
+全体最適とは、企業や組織、またはシステム全体が最適化された状態を示す経営用語のひとつです。  
+経営課題となりやすい生産性向上やコスト削減などの問題解決や経営改革に導入されるケースが多く、経営層から現場まで幅広く取り入れられている解決策でもあります。  
+"システム管理基準"によれば，組織全体の情報システムのあるべき姿を明確にする計画はどれか。
+→全体最適化計画。
+
+まぁ、読んで字のごとくか。  
+「最適である事」なんだからあるべき姿だし、こうあるべきだし、こうありたいなぁってことだよね。  
+ややこしいのはシステム管理基準によれば？って文言が入ってくることかな。後はタイミング？  
+全体最適化計画を考えるのは開発計画が終わってからなのかどうかとか結構あいまいじゃないですかね。  
+
+
+"システム管理基準"において，情報システムの費用，スケジュール，開発体制，投資効果などを明確にする計画はどれか。
+→
+あー。  
+全体最適化計画があるべき姿ってわかってしまえば、事業継続計画と年間運用計画は字句的に全く当てはまらないから消去法で開発計画しかないようになってるんだ。  
+それさえわかればこの問題十分だ。  
+
+じゃあ次は開発計画って何なの？ってまとめることになるけど、これは明日やろう。  
+
+
 
