--- a/BasicInformation/午前/2週目重点.md
+++ b/BasicInformation/午前/2週目重点.md
@@ -364,9 +364,8 @@ XPでは、プロダクトコードと並行してテストコードを書き、
 →  
 利害関係。  
 おいしい人とおいしくない人がいる。  
-英語の役がそのまんまだ。
-
 ・stakeholder : 利害関係者
+英語の役がそのまんまだ。
 
 
 
@@ -395,3 +394,87 @@ XPでは、プロダクトコードと並行してテストコードを書き、
 属性間の結合度を低下させることによって，更新時のロック待ちを減らす。
 正規化はパフォーマンス向上のために行うわけではありません。
 正規化を行うと表が幾つかに分割され、更新時にはこれらの表の結合が行われます。表が分割されるほどに結合処理も増加するのでロック待ちの減少には繋がりません。
+
+
+
+
+**平成27年春期　問13**  
+仮想化マシン環境を物理マシン20台で運用しているシステムがある。次の運用条件のとき，物理マシンが最低何台停止すると縮退運転になるか。
+
+〔運用条件〕
+物理マシンが停止すると，そこで稼働していた仮想マシンは他の全ての物理マシンで均等に稼働させ，使用していた資源も同様に配分する。
+物理マシンが20台のときに使用する資源は，全ての物理マシンにおいて70%である。
+1台の物理マシンで使用している資源が90%を超えた場合，システム全体が縮退運転となる。
+(1)～(3)以外の条件は考慮しなくてよい。
+→  
+全部で1400%。
+90％を超える。
+2台なら180%。
+3台なら270%。
+15台で1350%。
+16台で1400を超える。  
+というわけで、5台死んだらアウト。
+イメージ的にはこうなのだが、これだと微妙に答えに行きつかない。
+結局、下見たいに計算するしかないわけだ。
+
+とりあえず、この手の問題は全体の資源を求めてから比率を求める感じで解いていけばいいのかもしれない。
+
+20台の物理マシン上でそれぞれ70%の資源が使用されているので、システムが稼働するために必要となる総資源量は、  
+　20台×70%＝1,400(%)  
+物理マシン1台の資源量を基準とすると1,400%(物理マシン14台分の資源)になります。  
+x台の物理マシンが停止したとき、この資源量は残りの物理マシン数「20－x台」に均等に割り振られることになるので、各マシンの資源使用率を90%以下にするには、  
+
+　1,400÷(20－x)≦90
+　1,400≦90(20－x)
+　1,400≦1,800－90x
+　90x≦400
+　x≦4.444…(台)
+
+最大で4台までの停止が許容できることになります。したがって物理マシンの資源使用率が90%を超え、縮退運転に移行するのは停止台数が5台になった時点です。
+
+
+
+**平成26年春期　問65**
+"システム管理基準"において，情報システムの費用，スケジュール，開発体制，投資効果などを明確にする計画はどれか。
+→
+なんでも全体最適化計画にしたい病に侵されている。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
