--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -42,34 +42,21 @@ NULL -1 = NULL
 [【LINQ】Cast<T>は使わない方が良い？OfType<T>を使おう](https://threeshark3.com/castistrap/)  
 
 Castって失敗した時の挙動ってどうなのか知らなかったので調べた。  
-失敗すると例外を吐く模様  
-CastではなくOfTypeを使えばいいみたい。  
-CastはFirstと同じく罠。  
+→  
+失敗すると例外を吐く模様。  
+
+それはそうと、CastはFirstと同じくらい罠らしく、CastではなくOfTypeを使うべきって記事を見つけたのでまとめる。  
+
+## 自分自身のItemsSourceのCountをXAML上で使用する方法
+
+自分自身の要素が1件も無かったらDataTriggerでEnableをFalseにしたくて調べた。  
+やっぱりそれなりに需要はあるみたいで、実現できたのでまとめる。  
 
 ---
 
 ## 雑記
 
-
-・参考書の代金が支払われない。
-→
-運営からもお知らせが来た。
-明日まで待つ旨を説明し、最後通告をするか。
-→
-返信があった。事情により中々支払いができないということだった。
-今日中には支払われるとのことなので待つことにしよう。
-いやがらせでなければなんでもいい。
-別に急いでいるわけでもないので、確実に支払ってくれるなら文句はない。
-
-・出社前にやってみたが結構間違える。思考の癖が同じ。
-・てか、午前問題ってこんな感じだったっけか？
-意外と覚えているので、どんどんやっていこう。
-
-・ストロングイェーガー聞きたい。
-
-
-人はおおむね自分で思うほどには幸福でも不幸でもない。肝心なのは望んだり生きたりすることに飽きないことだ。
-
-
-数こなすよりも300問を完璧に覚えたほうがよくないだろうか。
+100均で筋トレ用のマット
+会社で新聞紙
+問診票を埋める
 
