10月5日出社前分

--- a/BasicInformation/とにかく.md
+++ b/BasicInformation/とにかく.md
@@ -188,6 +188,8 @@ $= 128ビット/秒$
 
 ---
 
+---
+
 ## エンタープライズアーキテクチャ
 
 基本も応用もエンタープライズ大好きだからな。  
@@ -220,6 +222,64 @@ $= 128ビット/秒$
 
 うーん。アプリケーション作る時に考えることそのままじゃないか・・・。  
 覚えてしまえばなんてことはないな。  
+
+---
+
+## バランススコアカード(Balanced Score Card、BSC)
+
+これもよく出るよねー。  
+だからここにまとめてるんだけど。  
+正直なんで財務、顧客、プロセス、学習と成長の視点から業績を判断できるかわからない。
+
+あー。ヒト、モノ、カネ＋キャク。  
+これで十分だ。ヒトは育成するので、学習。金と客はわかる。
+モノは消去法でプロセスだ。要は今あるものを最大限活用→プロセスの改善という意味でモノらしい。  
+
+調べてみたけど、要はどうやったら儲かるかってのを整理するための視点見たいね。  
+金をうまくやりくり出来ても、プロセスを改善してコストダウン出来ても、顧客を見方に付けて収益をアップしても、  
+人を育成してイノベーションをもたらしても、儲かるわけなので、じゃあ今どんな状況なのってのを考えるために作り出されたものっぽい。  
+そこまで調べてもなんでこの4つなのかはわからないけどねー。  
+とりあえず、これに関してはこれくらいでいいかなー。  
+
+企業のビジョンと戦略を実現するために、「財務」「顧客」「内部ビジネスプロセス」「学習と成長」という4つの視点から業績を評価・分析する手法です。
+なぜか学習は覚えている。  
+
+**財務の視点**  
+株主や従業員などの利害関係者の期待に応えて良い業績を出すために、財務的にどのように行動すべきかの指標を設定する。  
+
+**顧客の視点**  
+企業のビジョンを達成するために、顧客に対してどのように行動すべきかの指標を設定する。  
+
+**内部ビジネスプロセス(業務プロセス)の視点**  
+財務的目標の達成や顧客満足度を向上させるために、優れた業務プロセスを構築するための指標を設定する。  
+
+**学習と成長の視点**  
+企業のビジョンを達成するために、組織や個人としてどのように変化（改善）し能力向上を図るかの指標を設定する。  
+
+---
+
+## 3C分析
+
+3C分析は、マーケティング分析に必要不可欠な3要素「顧客(Customer)」「自社(Company)」「競合他社Competitor」について自社の置かれている状況を分析する手法です。
+顧客(Customer)
+自社(Company)
+競合他社(Competitor)
+
+大体この流れて頭にCがつく単語なんて顧客と会社くらいしかないじゃないですか。  
+そこはいいとして、目的が自社の置かれている状況ってのがしっくり来ないので、ここを納得する必要がある。  
+
+---
+
+## バリューチェーン分析
+
+業務を「購買物流」「製造」「出荷物流」「販売・マーケティング」「サービス」という5つの主活動と、「調達」「技術開発」「人事・労務管理」「全般管理」の4つの支援活動に分類し、製品の付加価値がどの部分（機能）で生み出されているかを分析する手法です。
+価値の連鎖を分析することによって競合他社と比較した自社の強みと弱みを明らかにしたり、業務の最適化を図ろうとする目的があります。「購買した原材料等に対して、各プロセスにて価値（バリュー）を付加していくことが企業の主活動である。」というコンセプトに基づいた考え方です。
+
+エンタープライズから、バランススコア、SWOT、3C、バリューチェーンあたりは全部頻出な気がするので全部覚える。  
+読んで字のごとく、バリューチェーンなので価値の連鎖なわけですよ。  
+価値の連鎖って事は、連鎖によって更に価値がどこかで生まれるわけですよ。  
+つまりそういう事ですよ。  
+後は、主活動と支援活動って単語がついてくる感じですかね。  
 
 ---
 
@@ -289,39 +349,6 @@ PMBOKによればプロジェクトにマイナスの影響を与えるリスク
 
 ---
 
-## バランススコアカード(Balanced Score Card、BSC)
-
-これもよく出るよねー。  
-だからここにまとめてるんだけど。  
-正直なんで財務、顧客、プロセス、学習と成長の視点から業績を判断できるかわからない。
-
-あー。ヒト、モノ、カネ＋キャク。  
-これで十分だ。ヒトは育成するので、学習。金と客はわかる。
-モノは消去法でプロセスだ。要は今あるものを最大限活用→プロセスの改善という意味でモノらしい。  
-
-調べてみたけど、要はどうやったら儲かるかってのを整理するための視点見たいね。  
-金をうまくやりくり出来ても、プロセスを改善してコストダウン出来ても、顧客を見方に付けて収益をアップしても、  
-人を育成してイノベーションをもたらしても、儲かるわけなので、じゃあ今どんな状況なのってのを考えるために作り出されたものっぽい。  
-そこまで調べてもなんでこの4つなのかはわからないけどねー。  
-とりあえず、これに関してはこれくらいでいいかなー。  
-
-企業のビジョンと戦略を実現するために、「財務」「顧客」「内部ビジネスプロセス」「学習と成長」という4つの視点から業績を評価・分析する手法です。
-なぜか学習は覚えている。  
-
-**財務の視点**  
-株主や従業員などの利害関係者の期待に応えて良い業績を出すために、財務的にどのように行動すべきかの指標を設定する。  
-
-**顧客の視点**  
-企業のビジョンを達成するために、顧客に対してどのように行動すべきかの指標を設定する。  
-
-**内部ビジネスプロセス(業務プロセス)の視点**  
-財務的目標の達成や顧客満足度を向上させるために、優れた業務プロセスを構築するための指標を設定する。  
-
-**学習と成長の視点**  
-企業のビジョンを達成するために、組織や個人としてどのように変化（改善）し能力向上を図るかの指標を設定する。  
-
----
-
 ## システム管理基準
 
 全体最適化計画とか開発計画とか、ここら辺の区切りがあいまい何だよな。  
@@ -349,5 +376,8 @@ PMBOKによればプロジェクトにマイナスの影響を与えるリスク
 
 じゃあ次は開発計画って何なの？ってまとめることになるけど、これは明日やろう。  
 
+**開発計画**  
+システム管理基準において、情報システムの費用、スケジュール、開発体制、投資効果などを明確化するのは、開発計画  
 
-
+順序的には全体最適化計画を立案して、あるべき姿はわかったとして、じゃあどうやって開発するってのを計画するのがこの段階な気がするなぁ。  
+てか、順序的にそれ以外ないでしょ。  
