10月5日会社分

--- a/Trivia/雑学.md
+++ b/Trivia/雑学.md
@@ -91,3 +91,13 @@ https://gigazine.net/news/20200807-hair-deforms-steel-blade/
 黒い緩衝材だけで出したことがあるのだが、怪訝な顔をされた。  
 聞いてみたら、やはり封筒に入れたほうがいいみたいだ。  
 まぁ、最終的な評価はよかったんだけどね。  
+
+2021/10/05 Tue  
+新聞紙だけの状態で差し出したら「本当にこれで出荷するのか？」みたいな顔をされたので、やっぱり最低、限封筒は必要だ。  
+
+### 3㎝ギリギリでも案外何とかなる
+
+パイソンの参考書を出荷する時の話。  
+メジャーで図って3㎝だったけど、ヤマトで測ってもらったらギリギリOKもらえた。  
+こういう時のために、梱包は新聞紙までにとどめて、封筒を一緒に持っていき、
+ヤマトさんに計測してもらってOKなら封筒で駄目だったら専用の箱って切り替えができるようにしたほうがいい。  
