--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -47,7 +47,8 @@ https://elf-mission.net/programming/wpf/mvvm-labo/phase05/
 
 
 ・abstractを実装したクラスの動きとは？参照はどうなる？
-
+・アップキャストとダウンキャスト
+・継承、実装関係が弱すぎる。
 
 
 1時間で標準入力からじゃんけんプログラムを作れ。
@@ -88,7 +89,7 @@ ORマッパーとはなにか？
 ・DB制約まとめ
 ・ロックのまとめ
 
-・ネットワークのクラスの復習
+
 ・スイッチは第何層で動く装置だったか。
 
 ・gulpってなに？
@@ -102,6 +103,8 @@ ORマッパーとはなにか？
 
 ・シングルトン
 
+・ネットワークのクラスの復習
+→今日中に覚えたい。
 
 
 ---
