--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -37,29 +37,28 @@ NULL -1 = NULL
 
 ## 名前付き引数 C#7.0
 
-## LinqのCast
 
-[【LINQ】Cast<T>は使わない方が良い？OfType<T>を使おう](https://threeshark3.com/castistrap/)  
 
-Castって失敗した時の挙動ってどうなのか知らなかったので調べた。  
-→  
-失敗すると例外を吐く模様。  
 
-それはそうと、CastはFirstと同じくらい罠らしく、CastではなくOfTypeを使うべきって記事を見つけたのでまとめる。  
 
-## 自分自身のItemsSourceのCountをXAML上で使用する方法
 
-自分自身の要素が1件も無かったらDataTriggerでEnableをFalseにしたくて調べた。  
-やっぱりそれなりに需要はあるみたいで、実現できたのでまとめる。  
 
 ---
 
 ## 雑記
 
-・100均で筋トレ用のマット
-・会社で新聞紙
-・問診票を埋める
 〆・朝一で買い物
+〆・会社で新聞紙
+〆・会社のSQLの資料をこっちにまとめる。
+〆・昼休みに荷物出荷
 ・タイヤの空気を入れる
+
+・100均で筋トレ用のマット＆封筒
+・問診票を埋める
+・よくわからいプレッシャーが常にかかっている。
+・カスタムコントロールが出来なくて死にそう。
+
+プレッシャーに関しては技術力不足もあると思う。
+直近のプロジェクトでわからないことがなければ、こんなに悩むことはないからね。
 
 基本情報など、1か所にまとめきれる量を超えているので、分散してまとめたほうがいいと思うんだよなぁ。  
