--- a/BasicInformation/とにかく.md
+++ b/BasicInformation/とにかく.md
@@ -283,6 +283,18 @@ $= 128ビット/秒$
 
 ---
 
+## アンゾフの成長マトリクス
+
+縦軸に「市場」、横軸に「製品」をとり、それぞれに「既存」「新規」の2区分を設け、4象限(市場浸透，製品開発，市場開拓，多角化)のマトリクスとしたものです。  
+事業が成長・発展できる経営戦略を検討するために適したフレームワークです。  
+
+既存市場 * 既存製品 = 市場浸透  
+既存市場 * 新規製品 = 製品開発  
+新規市場 * 既存製品 = 市場開拓  
+新規市場 * 新規製品 = 多角化  
+
+---
+
 ## リスク(脅威と好機)
 
 これもよく出る。
