--- a/BasicInformation/午前/1.テクノロジ系/9.データベース.md
+++ b/BasicInformation/午前/1.テクノロジ系/9.データベース.md
@@ -653,7 +653,7 @@ UMLの汎化、特価関係を復讐する必要がある。
 
 
 
-平成26年秋期　問24
+**平成26年秋期　問24**
 ある企業では，顧客マスタファイル，商品マスタファイル，担当者マスタファイル及び当月受注ファイルを基にして，月次で受注実績を把握している。各ファイルの項目が表のとおりであるとき，これら四つのファイルを使用して当月分と直前の3か月分の出力が可能な受注実績はどれか。
 →
 こういう、テーブルからキーの連携をイメージする問題が苦手かも。
