--- a/BasicInformation/午前/2週目重点.md
+++ b/BasicInformation/午前/2週目重点.md
@@ -454,6 +454,24 @@ Convertが変換するなので、Conversionは変換という名詞になる。
 
 
 
+**平成30年秋期　問62**  
+BPOを説明したものはどれか。  
+→
+なぜか覚えていた。  
+当て字がパッと思いついたのは何だったのだろうか。
+BusinessProcessOutsourcing  
+
+
+
+**平成31年春期　問26**
+関係モデルの属性に関する説明のうち，適切なものはどれか。
+→
+また間違えた。前回の思考をトレースしたような感じだ。  
+てか、思考をトレースする地点でわかってない証拠だ。  
+この程度、答えがわかっていたら悩む必要はないのだから。  
+
+関係モデルに置ける定義息(ドメイン)は型の定義なので、例えば整数型が2つ以上の属性として登録されていても別に問題はないでしょう。  
+並び順に意味はない。  
 
 
 
@@ -461,10 +479,13 @@ Convertが変換するなので、Conversionは変換という名詞になる。
 
 
 
+思ったが、ここにまとめる寄りもそれぞれのプロジェクトにまとめるのがいいのでは？  
+いや、どうせメモ帳なのだからこれくらいいいじゃないか。  
+どんなにまとめたところで、頭でわかってないと意味のないことだ。  
+後は、グダグダ書くくらいなら頭の中でグダグダいうべきだ。  
 
-
-
-
+基本情報って基本的に選択肢は2つに絞れる程度には簡単なので、時間もないことだし、全部は覚えないでいいでしょう。
+どちらか一方で十分。
 
 
 
