--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -47,18 +47,11 @@ NULL -1 = NULL
 
 ## 雑記
 
-〆・朝一で買い物
-〆・会社で新聞紙
-〆・会社のSQLの資料をこっちにまとめる。
-〆・昼休みに荷物出荷
-・タイヤの空気を入れる
+・会社の健保のあれ注文する。
 
 ・100均で筋トレ用のマット＆封筒
-・問診票を埋める
-・よくわからいプレッシャーが常にかかっている。
-・カスタムコントロールが出来なくて死にそう。
 
-プレッシャーに関しては技術力不足もあると思う。
-直近のプロジェクトでわからないことがなければ、こんなに悩むことはないからね。
+・問診票を埋める→明日居林さんに直前に書くものなのか事前に書くものなのかどちらか効いてみる。
 
-基本情報など、1か所にまとめきれる量を超えているので、分散してまとめたほうがいいと思うんだよなぁ。  
+・俺が仕様書メモとしてまとめてる内容は全て開発フォルダの仕様書フォルダに乗っけておけばいいのでは？
+
