10月06日会社分

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -39,19 +39,233 @@ NULL -1 = NULL
 
 
 
+Overrideしたイベントは -= +=で解除と登録はできない。
+
+
+staticだとthis.でアクセスできないのまとめる。
 
 
 
+``` C#
+using C1.WPF.Input;
+using System.Collections;
+using System.Collections.Specialized;
+using System.Windows;
+using System.Windows.Controls;
+
+namespace RN3.Wpf.Common.Control
+{
+    /// <summary>
+    /// C1MultiSelect拡張コントロール
+    /// </summary>
+    public class CustomMultiSelect : C1MultiSelect
+    {
+        #region プロパティ
+        /// <summary>
+        /// 表示行数公開プロパティ登録
+        /// </summary>
+        public static readonly DependencyProperty SelectedItemsProperty =
+            DependencyProperty.Register(
+                "SelectedItems",
+                typeof(IList),
+                typeof(CustomMultiSelect),
+                new PropertyMetadata(null, new PropertyChangedCallback(OnSelectedItemsChanged))
+            );
+        /// <summary>
+        /// 表示行数
+        /// </summary>
+        public new IList SelectedItems
+        {
+            get { return (IList)GetValue(SelectedItemsProperty); }
+            set { SetValue(SelectedItemsProperty, value); }
+        }
+
+        private bool flag = false;
+        #endregion
+
+
+        #region コンストラクタ
+        /// <summary>
+        /// コンストラクタ
+        /// </summary>
+        public CustomMultiSelect()
+        {
+        }
+        #endregion
+
+
+        #region 内部処理
+        private static void OnSelectedItemsChanged(DependencyObject d, DependencyPropertyChangedEventArgs e)
+        {
+            var control = (CustomMultiSelect)d;
+            if (control.SelectedItems is INotifyCollectionChanged notify)
+            {
+                notify.CollectionChanged -= control.aa;
+                notify.CollectionChanged += control.aa;
+            }
+
+            //if (d != null)
+            //{
+            //    //fg.SetValue(
+            //    //    SelectedItemsProperty,
+            //    //    () => SelectedItems.Add(e.NewValue)
+            //    //);
+            //    if (control.ListBox != null)
+            //    {
+
+            //        control.ListBox.SelectedItems.Add(e.NewValue);
+            //    }
+            //}
+
+
+            //if (d is CustomMultiSelect multiselect)
+            //{
+            //    multiselect.SelectionChanged += (s, eventArgs) =>
+            //    {
+            //        multiselect.SelectedItems.Add(s);
+            //        //var items = (List)multiselect.SelectedItems;
+            //        //if (items == null)
+            //        //{
+            //        //    return;
+            //        //}
+            //        //foreach (var item in items.Where(x => x.IsSelected == true))
+            //        //{
+            //        //    multiselect.SelectedItems.Add(item);
+            //        //}
+            //    };
+            //    //// 削除
+            //    //foreach (var deleteItem in args.RemovedItems.OfType<SubjectLargeTypeWithSubjectCDList>())
+            //    //{
+            //    //    multiselect.Remove(deleteItem);
+            //    //}
+            //    //// 追加
+            //    //foreach (var addItem in args.AddedItems.OfType<SubjectLargeTypeWithSubjectCDList>())
+            //    //{
+            //    //    multiselect.Add(addItem);
+            //    //}
+            //}
+        }
+
+        private void aa(object sender, NotifyCollectionChangedEventArgs e)
+        {
+            flag = true;
+
+            if (e.Action == NotifyCollectionChangedAction.Add)
+            {
+                foreach (var item in e.NewItems)
+                {
+                    ListBox.SelectedItems.Add(item);
+                }
+            }
+            else if (e.Action == NotifyCollectionChangedAction.Remove)
+            {
+                foreach (var item in e.OldItems)
+                {
+                    ListBox.SelectedItems.Remove(item);
+                }
+            }
+            else if (e.Action == NotifyCollectionChangedAction.Reset)
+            {
+                ListBox.SelectedItems.Clear();
+            }
+
+            flag = false;
+        }
+
+
+        protected override void OnSelectionChanged(object sender, SelectionChangedEventArgs e)
+        {
+            if (flag)
+            {
+                return;
+            }
+            if (SelectedItems is INotifyCollectionChanged x)
+            {
+                x.CollectionChanged -= aa;
+
+                // 削除
+                foreach (var deleteItem in e.RemovedItems)
+                {
+                    SelectedItems.Remove(deleteItem);
+                }
+                // 追加
+                foreach (var addItem in e.AddedItems)
+                {
+
+                    SelectedItems.Add(addItem);
+                }
+
+                x.CollectionChanged += aa;
+            }
+
+            base.OnSelectionChanged(sender, e);
+        }
+        #endregion
+    }
+}
+```
+
+
+
+
+テンププロパティ
+コントロールがあって、
+テキストボックスとボタン。
+カーソルが当たったら色を変えたい。
+どちらにもその機能はない。
+じゃあCustomButton,CustomTextを作るかと言われたらそうではない。
+テンププロパティなるものを作って、それをテキストボックスとボタンに実装してあげることで、その機能を実現することができる。
+それが、テンププロパティ。
+
+
+DependencyProperty→バインディングができるようにする。コントロールにそういう機能がある。
+
+INotify
+Classに実装。
+
+バインディングをしたときに、バインド間で通知をしてくれる。
+。Net側の処理。
+
+CollectionChanged。
+
+ObsColle 
+Foreachの中で、inに入れるコレクションの内容が変わった時にエラーが発生する。
+これは、イベントが邪魔をしている証拠。
+抑制する必要がある。
 
 ---
 
 ## 雑記
 
-・会社の健保のあれ注文する。
+・昼休みでローカルのラウンドナビを動かせるようにしておく。
 
-・100均で筋トレ用のマット＆封筒
+〆・問診票を埋める→明日居林さんに直前に書くものなのか事前に書くものなのかどちらか効いてみる。
+→熱は当日。それ以外は前日にでも行けるらしい。
 
-・問診票を埋める→明日居林さんに直前に書くものなのか事前に書くものなのかどちらか効いてみる。
+〆・会社の健保のあれ注文する。
+令和3年10月12日（火）9時から令和3年10月25日（月）24時まで
+
+・100均で筋トレ用のマット＆封筒購入
 
 ・俺が仕様書メモとしてまとめてる内容は全て開発フォルダの仕様書フォルダに乗っけておけばいいのでは？
+メモ書き程度のやつは上に持っていくのはどうかな。
+
+
+・プライベート開いて元年80問をやってしまうってのも十分あり。要は直近5年分を覚えればいいので。
+
+・そろそろベストを手入れしたい
+・布団を洗濯する
+・掃除する
+・髪切る
+
+・青森で震度5。あさイチで家族にラインした。
+→無事で何より。いつものペースだった。
+
+・4連勤目。さすがに疲れた。
+・割り勘でViewModelから選択状態を反映させることに成功した。めっちゃうれしかった。
+・おまけにCallMethodActionでFlexGridのソートをクリアできることも発見できたのでこれもうれしかった。
+・自分の修正も順調に終わったので、終わりとしては気持ちが良い。
+
+・そういえば最近、全然紅茶を飲まなくなったな。コーヒーとお湯で十分に感じる。
+また金がかからなくなったな。
 
