--- a/BasicInformation/午前/2週目重点.md
+++ b/BasicInformation/午前/2週目重点.md
@@ -474,7 +474,177 @@ BusinessProcessOutsourcing
 並び順に意味はない。  
 
 
+---
 
+2021/10/06 Wed  
+
+**令和元年秋期　問49**  
+単一の入り口をもち，入力項目を用いた複数の判断を含むプログラムのテストケースを設計する。命令網羅と判定条件網羅の関係のうち，適切なものはどれか。  
+→  
+条件網羅が強い。  
+すべて分岐先を調べれば全ての命令を網羅したことにもなる。  
+
+
+
+**平成28年秋期　問48**  
+整数1～1,000を有効とする入力値が，1～100の場合は処理Aを，101～1,000の場合は処理Bを実行する入力処理モジュールを，同値分割法と境界値分析によってテストする。次の条件でテストするとき，テストデータの最小個数は幾つか。
+
+〔条件〕
+有効同値クラスの1クラスにつき，一つの値をテストデータとする。ただし，テストする値は境界値でないものとする。
+有効同値クラス，無効同値クラスの全ての境界値をテストデータとする。
+→
+同値分割法ってのは、有効範囲内の適当な値1つを選んでtestする方法。
+0 < x < 50なら 0寄りちいさ、1～49、50より大きいどれか3つがtest数になる。  
+
+境界値分析は上限値と下限値を選ぶ奴。
+0なら-1と0がテストケースになる。
+
+まとめてみたけど、当たり前の事しか行ってないな。  
+
+あー、でも認識が違う。
+自分は0,1,99,100,101,102,999,1000の8つだと思ってたけど、答えは0,1,50,100,101,500,1000,1001が正解みたいだ。
+同値分割が50,500
+境界値が0,1,100,101,1000,1001。
+
+
+
+**平成30年春期　問1**
+ある整数値を，負数を2の補数で表現する2進表記法で表すと最下位2ビットは"11"であった。10進表記法の下で，その整数値を4で割ったときの余りに関する記述として，適切なものはどれか。ここで，除算の商は，絶対値の小数点以下を切り捨てるものとする。
+→  
+明日まとめる。
+
+設問では「ある整数値を…2進数記法で表すと最下位ビットが"11"であった。」としていますが、最下位2ビットが"11"となる整数値の特徴は正負によって異なります。
+
+[正の数の場合]
+正の数に対しては2の補数を適用しないので、2進数表現 xx…x11 をそのまま10進数に直すことを考えます（xは任意のビット）。最下位2ビットが"11"となる正の数は、
+111(2) → 7(10)
+1011(2) → 11(10)
+10111(2) → 23(10)
+110011(2) → 51(10)
+というように、常に「4で割った余りが3である数」になります。これは4で割るという行為が2進数のビット列を右に2つシフトさせることと同義だからです。ビット列全体を右に2つシフトさせると、"11"（＝10進数で3）の部分が端数（＝除算の余り）となります。
+
+[負の数の場合]
+2の補数に変換したときと逆の手順で、その負数の絶対値を示すビット列を求めます。
+xx…x11 から1を引く。
+　xx…x10
+全てのビットを反転させる。
+　xx…x01 //絶対値の2進数表現
+これにより、2の補数表現で最下位2ビットが"11"となる負数があるとき、その負数の絶対値の最下位2ビットは必ず"01"になることがわかります。最下位2ビットが"01"となる数は、
+101(2) → (絶対値)5(10) → (負数)－5(10)
+1001(2) → (絶対値)9(10) → (負数)－9(10)
+10101(2) → (絶対値)21(10) → (負数)－21(10)
+110001(2) → (絶対値)49(10) → (負数)－49(10)
+というような数の集合になります。これらの負数を4で割ると余りは 3 または －1 になります。ここで、設問の「除算の商は，絶対値の小数点以下を切り捨てるものとする。」という条件を適用すると、
+－5÷4＝－1.25 → 絶対値の小数点以下を切り捨てると商は－1
+商が－1ならば余りは－1
+－9÷4＝－2.25 → 絶対値の小数点以下を切り捨てると商は－2
+商が－2ならば余りは－1
+というように、常に「4で割った余りは－1」になります。
+
+以上より、最下位2ビットが"11"である整数値を4で割った余りは、その整数値が正ならば3、負ならば－1になります。よって「ア」の記述のみが適切です。
+2の補数
+2進数で負数を表現する方法の一つです。ある負の数を2の補数で表すには、①その負の数の絶対値を2進数に直し、②すべてのビットを反転して、③その結果に1を加えます。
+
+例えば、10進数表記の -10 は以下の手順で2の補数に変換します。
+-10の絶対値である10を2進数に直す。
+　10(10) →　1010(2)
+1010(2)の全ビットを反転させる。
+　1010(2) → 0101(2)
+②の結果に1を加える。
+　0101(2) → 0110(2)
+
+
+
+**平成26年春期　問46**
+UMLにおける図の　の中に記述するものはどれか。
+→
+覚えた。クラス名です。
+
+
+
+
+**平成30年春期　問30**
+RDBMSのロックの粒度に関する次の記述において，a，bの組合せとして適切なものはどれか。
+
+　並行に処理される2つのトランザクションがそれぞれ一つの表内の複数の行を更新する。行単位のロックを使用する場合と表単位のロックを使用する場合とを比べると，ロックの競合がより起こりやすいのはa単位のロックを使用する場合である。また，トランザクション実行中にロックを管理するためのRDBMSのメモリ使用領域がより多く必要になるのはb単位のロックを使用する場合である。
+→
+普通に考えて、行のほうが小さいのだから競合は発生しにくい。
+しかし、数が多いので、管理のメモリは食うってそんな具合でしかない。
+
+
+ロックの粒度とは、データベース、表、物理的な入出力単位であるブロック、行といったロックをかける資源の単位をいいます。ロックの範囲が狭い（粒度が細かい）ほど資源の競合やロック解除の待ち時間が少なくなり、トランザクションの並列実行性が増します。
+
+〔aについて〕
+まずロックの競合についてですが、設問では表単位のロックと行単位のロックを比較しているので、ロックの競合が起こりやすいのは、より広い範囲をロックする表単位です。
+
+〔bについて〕
+メモリ使用領域は、同時に実行されるトランザクションが増えるほど多く必要になります。その理由は、1つのトランザクションを実行するときよりも、複数のトランザクションを並列に実行したときの方が、同時に管理するロックの絶対数が増えるからです。つまりメモリ使用領域が多く必要になるのは、トランザクションの同時実行数が多い行単位です。
+
+以上より、適切な組合せは、a＝表、b＝行 とわかります。よって「ウ」が正解です。
+
+
+
+**平成29年春期　問34**  
+IPv4アドレス 128.0.0.0 を含むアドレスクラスはどれか。  
+→  
+忘れた。ちゃんと復習するって約束したじゃない。  
+でも、172とか192を2進数に変換して見比べて見れば法則性はわかるので、案外何とかなる。
+
+IPアドレスクラスを判別するには、対象となるIPアドレスの上位8ビットに注目します。問題の 128.0.0.0 では「128」が注目する部分となります。
+
+IPv4におけるA～Dの各アドレスクラスは、以下のようにIPアドレスの先頭4ビットによって区別されています。
+クラスA
+先頭ビットが0 (先頭8ビットの10進表記が0～127)
+クラスB
+先頭ビットが10 (先頭8ビットの10進表記が128～191)
+クラスC
+先頭ビットが110 (先頭8ビットの10進表記が192～223)
+クラスD
+先頭ビットが1110 (先頭8ビットの10進表記が224～239)
+10進数128を2進数表記に変換すると10000000です。この定義に当てはめると、128はクラスBの範囲内であるため、128.0.0.0 はクラスBのIPアドレスということになります。したがって「イ」が正解です。
+
+
+
+**平成30年春期　問65**
+国や地方公共団体などが，環境への配慮を積極的に行っていると評価されている製品・サービスを選んでいる。この取組みを何というか。
+→
+グリーン購入は覚えた。
+というか前に一回やらなかったっけか？
+あの時はグリーン調達だ。  
+
+
+グリーン購入とは、製品やサービスを購入する際に、環境を考慮して、必要性をよく考え、環境への負荷ができるだけ少ないものを選んで購入することです。
+我が国においては、2001年(平成13年)にグリーン購入法（国等による環境物品等の調達の推進等に関する法律）が施行されました。この法律は、国等の機関にグリーン購入を義務づけるとともに、地方公共団体や事業者・国民にもグリーン購入に努めることを求めています（環境省HPより引用）。
+
+
+
+**平成29年秋期　問17**
+ソフトウェア制御における，ポーリング制御はどれか。
+→
+トークンがリング上を巡回して何かする程度までは知ってるけど、それが何なのかは知らないといった感じか。  
+答えは「CPUが状態レジスタまたはビジー信号などを呼び出して、入出力装置の状態を監視する」らしいけど、この答えは俺の認識の1つにも引っかからないんだよな。
+
+ソフトウェア制御におけるポーリング制御は、ループにより各部の情報を一定時間ごとに順番に収集し、その情報をもとにソフトウェアの状態を判断して処理を行う制御方式です。システム上でいつ発生するか分からないイベントを監視する目的で設定されます。
+
+
+
+**平成27年秋期　問56**
+情報システムの安全性や信頼性を向上させる考え方のうち，フェールセーフはどれか。
+→
+なんでこれ間違えたんだ？いや、間違えたとも限らないか。
+単純に重要な問題だからね。
+
+フェールセーフ(Fail Safe)は、システムの不具合や故障が発生した場合に、障害の影響範囲を最小限にとどめ、常に安全を最優先にして制御を行う考え方や設計方針です。
+「工業用機械で進入禁止区域をセンサーで監視し、人や物の侵入を感知したときには機械を緊急停止する」、「信号機が故障したときは交差点内の信号機を全て赤信号にする」というような安全最優先の設計がフェールセーフの実践例です。
+
+
+
+**平成30年秋期　問29**
+ロックの粒度に関する説明のうち，適切なものはどれか。
+→  
+まぁ、表全体でロック掛けるので、ロックの範囲がでかくなって、ロックまちが多くなってスループットは下がるだろうな。
+→  
+ロックの粒度とは、データベース、表、物理的な入出力単位であるブロック、行といったロックをかける資源の単位をいいます。ロックの範囲が狭い（粒度が細かい）ほど資源の競合やロック解除の待ち時間が少なくなり、トランザクションの並列実行性が増します。しかし、粒度が細かくなるほど管理が煩雑になるのでCPUの負荷が増します。反対に粒度が大きいと、管理は楽になりますが、他のトランザクションのロック解除を待つことが多くなるためスループットは低下します。
 
 
 
