--- a/BasicInformation/午前/2週目重点.md
+++ b/BasicInformation/午前/2週目重点.md
@@ -512,7 +512,27 @@ BusinessProcessOutsourcing
 ある整数値を，負数を2の補数で表現する2進表記法で表すと最下位2ビットは"11"であった。10進表記法の下で，その整数値を4で割ったときの余りに関する記述として，適切なものはどれか。ここで，除算の商は，絶対値の小数点以下を切り捨てるものとする。
 →  
 明日まとめる。
+例えば5を考えたとき、
+正 : 0101  5
+負 : 1011 -5
+でも正の数として見たら11になるから、あまりは3。
+だから正の数の場合あまりは3になるって認識まではよかったが、負の数の表現に関しては少々違った模様。
+俺が2の補数で学んだのは、反転して1を加えるってだけで、絶対値という概念はなかった。
+知識に抜けがあったみたいなので、まとめることにする。  
 
+なんてことはない-10の絶対値は10なので、それを2進数に変換すると1010になるでしょ。それを反転して1を足せば補数が求められるよってはなしか。  
+補数って繰り上がりを起こす最小の数って意味だったよな。  
+
+あー。。なんとなく言ってる意味がわかった。
+2の補数表現を取った時に最下位2ビットが11になる数には5は含まれている。
+
+正の数の状態で最下位2ビットが11になる数と2の補数にしたときに最下位2ビットが11になる数はそれぞれ、
+7(111) や -5 (1011)がある。
+マイナスの数に関しては
+
+その5の絶対値である5と単純に負の数である-5としたとき、それを4で割ったら、
+
+``` txt : 解説
 設問では「ある整数値を…2進数記法で表すと最下位ビットが"11"であった。」としていますが、最下位2ビットが"11"となる整数値の特徴は正負によって異なります。
 
 [正の数の場合]
@@ -525,23 +545,43 @@ BusinessProcessOutsourcing
 
 [負の数の場合]
 2の補数に変換したときと逆の手順で、その負数の絶対値を示すビット列を求めます。
+
 xx…x11 から1を引く。
-　xx…x10
+xx…x10
 全てのビットを反転させる。
-　xx…x01 //絶対値の2進数表現
-これにより、2の補数表現で最下位2ビットが"11"となる負数があるとき、その負数の絶対値の最下位2ビットは必ず"01"になることがわかります。最下位2ビットが"01"となる数は、
+xx…x01 //絶対値の2進数表現
+
+これにより、2の補数表現で最下位2ビットが"11"となる負数があるとき、その負数の絶対値の最下位2ビットは必ず"01"になることがわかります。
+→
+絶対値と言っているので、これは補数にする前の値の事を言っている。
+5の補数表現では最下位2ビットは11になる。5の元の数は101で最下位2ビットが01になる。
+ということで、この法則性が当てはまる連中には以下の奴らがいるって事か。  
+
+最下位2ビットが"01"となる数は、
 101(2) → (絶対値)5(10) → (負数)－5(10)
 1001(2) → (絶対値)9(10) → (負数)－9(10)
 10101(2) → (絶対値)21(10) → (負数)－21(10)
 110001(2) → (絶対値)49(10) → (負数)－49(10)
-というような数の集合になります。これらの負数を4で割ると余りは 3 または －1 になります。ここで、設問の「除算の商は，絶対値の小数点以下を切り捨てるものとする。」という条件を適用すると、
+
+というような数の集合になります。
+これらの負数を4で割ると余りは 3 または －1 になります。
+ここで、設問の「除算の商は，絶対値の小数点以下を切り捨てるものとする。」という条件を適用すると、
+
 －5÷4＝－1.25 → 絶対値の小数点以下を切り捨てると商は－1
 商が－1ならば余りは－1
 －9÷4＝－2.25 → 絶対値の小数点以下を切り捨てると商は－2
 商が－2ならば余りは－1
+
 というように、常に「4で割った余りは－1」になります。
 
 以上より、最下位2ビットが"11"である整数値を4で割った余りは、その整数値が正ならば3、負ならば－1になります。よって「ア」の記述のみが適切です。
+→
+これが全てでは？
+111である7を4で割ったらあまりは3。
+補数にしたとき最下位2ビットが11となる数が正ならあまりは3だが、負なら-1になる。
+1011、絶対値は7。補数として見たら-5。そういうことでは？
+
+
 2の補数
 2進数で負数を表現する方法の一つです。ある負の数を2の補数で表すには、①その負の数の絶対値を2進数に直し、②すべてのビットを反転して、③その結果に1を加えます。
 
@@ -552,6 +592,7 @@ xx…x11 から1を引く。
 　1010(2) → 0101(2)
 ②の結果に1を加える。
 　0101(2) → 0110(2)
+```
 
 
 
@@ -559,7 +600,6 @@ xx…x11 から1を引く。
 UMLにおける図の　の中に記述するものはどれか。
 →
 覚えた。クラス名です。
-
 
 
 
@@ -603,6 +643,25 @@ IPv4におけるA～Dの各アドレスクラスは、以下のようにIPアド
 先頭ビットが1110 (先頭8ビットの10進表記が224～239)
 10進数128を2進数表記に変換すると10000000です。この定義に当てはめると、128はクラスBの範囲内であるため、128.0.0.0 はクラスBのIPアドレスということになります。したがって「イ」が正解です。
 
+A 0    0000 0000(000) ~ 0111 1111(127)
+B 10   1000 0000(128) ~ 1011 1111(191)
+C 110  1100 0000(192) ~ 1101 1111(223)
+D 1110 1110 0000(224) ~ 1110 1111(239)
+
+16~31 : 0001 0000 ~ 0001 1111
+
+10.0.0.0 – 10.255.255.255
+0000 1010 . 0000 0000 . 0000 0000 . 0000 0000
+0000 1010 . 1111 1111 . 1111 1111 . 1111 1111
+
+172.16.0.0 - 172.31.255.255
+1010 1100 . 0001 0000 . 0000 0000 . 0000 0000
+1010 1100 . 0001 1111 . 1111 1111 . 1111 1111
+
+192.168.0.0 – 192.168.255.255
+1100 0000 . 1010 1000 . 0000 0000 . 0000 0000
+1100 0000 . 1010 1000 . 1111 1111 . 1111 1111
+
 
 
 **平成30年春期　問65**
@@ -645,6 +704,16 @@ IPv4におけるA～Dの各アドレスクラスは、以下のようにIPアド
 まぁ、表全体でロック掛けるので、ロックの範囲がでかくなって、ロックまちが多くなってスループットは下がるだろうな。
 →  
 ロックの粒度とは、データベース、表、物理的な入出力単位であるブロック、行といったロックをかける資源の単位をいいます。ロックの範囲が狭い（粒度が細かい）ほど資源の競合やロック解除の待ち時間が少なくなり、トランザクションの並列実行性が増します。しかし、粒度が細かくなるほど管理が煩雑になるのでCPUの負荷が増します。反対に粒度が大きいと、管理は楽になりますが、他のトランザクションのロック解除を待つことが多くなるためスループットは低下します。
+
+
+---
+
+
+2021/10/07 Thu
+
+
+**平成26年春期　問10**
+主記憶のアクセス時間60ナノ秒，キャッシュメモリのアクセス時間10ナノ秒のシステムがある。キャッシュメモリを介して主記憶にアクセスする場合の実効アクセス時間が15ナノ秒であるとき，キャッシュメモリのヒット率は幾らか。
 
 
 
