--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -95,16 +95,13 @@ ORマッパーとはなにか？
 ・gulpってなに？
 
 ・プライベートとグローバルを覚えたい。
-・英語ee
+
 ・80 70
 
 思えば、PHP,JavaScript,TypeScriptの文法がわからない。
 基本的なところを改めてまとめたい。  
 
 ・シングルトン
-
-・ネットワークのクラスの復習
-→今日中に覚えたい。
 
 ・ハッシュとは？
 一方通行の関数ではなく
@@ -143,3 +140,10 @@ Venderだけをダウンロートする事はできるのだろうか。
 →とりあえず、何かある度にまとめていく。
 直近の405はまとめたのでokにする。
 〆・DDLまとめ
+
+〆・ネットワークのクラスの復習
+→今日中に覚えたい。  
+→後日にはなったが、ちゃんと復習した。  
+IPアドレスに関してはクラス分けとプライベートの範囲さえわかれば十分な気がする。  
+
+〆・英語ee
