10月08日会社分

--- a/BasicInformation/午前/1.テクノロジ系/11.セキュリティ.md
+++ b/BasicInformation/午前/1.テクノロジ系/11.セキュリティ.md
@@ -5,7 +5,8 @@
 
 
 **公開鍵暗号方式**  
-暗号化して送信することは誰でもできるが、暗号化された内容を復号できるのは正規の受信者だけという特徴をもつ暗号方式。
+暗号化して送信することは誰でもできるが、暗号化された内容を復号できるのは正規の受信者だけという特徴をもつ暗号方式。  
+1対Nの組み合わせに対応できる。  
 
 まず、自分だけが持つ鍵A（秘密鍵）と、みんなにばらまく鍵B（公開鍵）を用意します。
 鍵は「暗号化したり、元に戻したり（復号）するときに使うデータ」ね。
@@ -108,18 +109,6 @@ Assetは資産。資産から連想できるものもだいぶ答えに近い。
 この仕組みによって「発信者が正当であるか」と「改ざんの有無」の2点を確認できる。
 改ざんの検知はできるが、改ざん部位の特定および訂正機能はもたない。
 
-1.送信者は秘密鍵を使って書名を作成
-2.受信者は送信者の公開鍵を使って書名を復号
-3.復号した平文をハッシュ関数に通してメッセージダイジェストを生成
-4.復号した書名のメッセージダイジェストを比較する。
-　一致したら送信者の正当性と改ざん無しを保障できる。
-
-送信者が秘密鍵を使って署名を作成し，それをメッセージに付加することによって，受信者が送信者を確認できるようにする。
-
-アプリケーションソフトウェアにディジタル署名を施す事もあるらしい。  
-その目的は改ざんの検出。  
-
-
 ディジタル署名の生成及び検証手順は次の通りです。
 1.送信者は、メッセージをハッシュ関数にかけてメッセージダイジェスト(ハッシュ値)を得る。
 2.送信者は、メッセージダイジェストを送信者の秘密鍵で暗号化することでディジタル署名を生成し、メッセージと一緒に送信する。
@@ -128,7 +117,10 @@ Assetは資産。資産から連想できるものもだいぶ答えに近い。
 5.一つのメッセージからハッシュ関数によって生成されるメッセージダイジェストは常に同じになるため、送信者から送られてきたメッセージダイジェストと、受信側でハッシュ化したメッセージダイジェストが同じなら、通信内容が改ざんされていないことが証明される。
 
 ディジタル署名の検証鍵は「送信者の公開鍵」であり、その使用方法は「受信者がディジタル署名からメッセージダイジェストを算出する」ことです。
+送信者が秘密鍵を使って署名を作成し，それをメッセージに付加することによって，受信者が送信者を確認できるようにする。
 
+アプリケーションソフトウェアにディジタル署名を施す事もあるらしい。  
+その目的は改ざんの検出。  
 
 ### 電子署名
 
@@ -138,7 +130,6 @@ Assetは資産。資産から連想できるものもだいぶ答えに近い。
 コンピュータの世界の書類（ファイル）にポンッ！と押すことで、その書類の正当性を示します。
 
 世の中には、電子署名と似たような字面の用語で「デジタル署名」という用語があります。
-こいつが曲者です。
 
 「電子署名」と「デジタル署名」は、同じ意味で扱う人がいます。
 区別する人もいます。
@@ -198,10 +189,8 @@ Assetは資産。資産から連想できるものもだいぶ答えに近い。
 ２．改ざんされてないよ～
 
 を示すために、ファイルにくっつけるデータがデジタル署名です。
-デジタル署名は「公開鍵暗号方式」と呼ばれる仕組みを使って、実現されています。
 
 ここで話を電子署名に戻します。
-
 デジタル署名は、ファイルの正当性を証明するものです。
 このことから
 
@@ -231,7 +220,7 @@ Assetは資産。資産から連想できるものもだいぶ答えに近い。
 
 
 
-**PKI(Public Key Infrastructure)**  
+### PKI(Public Key Infrastructure)
 「公開鍵暗号方式」と呼ばれる暗号化のやり方と「電子証明書」と呼ばれるものを使って、あれやこれやすることで、通信の安全性を高める仕組み
 公開鍵が正当な送信者の物であることを保証する仕組み。
 
@@ -240,8 +229,18 @@ Assetは資産。資産から連想できるものもだいぶ答えに近い。
 3.クライアントにディジタル証明書を送る
 4.クライアントは**認証局の公開鍵**で復号してディジタル証明書中の秘密鍵の保持者の情報と公開鍵を入手し、認証局の署名を確認する。
 
+### 認証局(Certificaion Authority:CA)
+公開鍵暗号方式を用いたデータ通信において、利用者(主にサーバ)の公開鍵の正当性を保証するためのディジタル証明書を発行する第三者機関です。
+CRL(証明書失効リスト)を発行する
+CPS(認証局運用規定)を公開する
+ディジタル証明書を検証するための認証局の公開鍵を公開する
+認証局の秘密鍵を厳重に管理する
 
-**SSL(Secure Socket Layer)**  
+### メッセージ認証符号(Message Authentication Code:MAC)
+通信コードの改ざん有無を検知し、完全性を保証するために通信データから生成する固定長のコード(メッセージダイジェスト)です。
+MACの目的は改ざんの検知なのでディジタル署名と似ていますが、生成には公開鍵暗号方式ではなく共通鍵暗号方式やハッシュ関数が用いられます。
+
+### SSL(Secure Socket Layer)
 暗号化と認証の機能を提供するプロトコル。
 一番最初に公開鍵暗号方式でサーバーとクライアントが共通鍵をやり取りして、以降共通鍵で通信する方式。
 
@@ -253,38 +252,21 @@ Assetは資産。資産から連想できるものもだいぶ答えに近い。
 6.Webサーバーは秘密鍵で暗号化された乱数を復号する。
 7.WebサーバーとWebクライアントでマスターシークレット(MS)と呼ばれる鍵を生成し、このMSから生成した共通鍵を使って暗号化通信を行う。
 
-
-**認証局(Certificaion Authority:CA)**  
-公開鍵暗号方式を用いたデータ通信において、利用者(主にサーバ)の公開鍵の正当性を保証するためのディジタル証明書を発行する第三者機関です。
-CRL(証明書失効リスト)を発行する
-CPS(認証局運用規定)を公開する
-ディジタル証明書を検証するための認証局の公開鍵を公開する
-認証局の秘密鍵を厳重に管理する
-
-
-**メッセージ認証符号(Message Authentication Code:MAC)**  
-通信コードの改ざん有無を検知し、完全性を保証するために通信データから生成する固定長のコード(メッセージダイジェスト)です。
-MACの目的は改ざんの検知なのでディジタル署名と似ていますが、生成には公開鍵暗号方式ではなく共通鍵暗号方式やハッシュ関数が用いられます。
-
-
-**IPsec(IP Security)**  
+### IPsec(IP Security)
 IP(Internet Protocol)を拡張してセキュリティを高めたプロトコル。
 改ざんの検知、通信データの暗号化、送信元の認証などの機能をOSI基本参照モデルのネットワーク層レベル(TCP/IPモデルではIP層)で提供します。
 IPsecを用いれば上層のアプリケーションに依存せずに暗号化通信を行えるため、VPNの構築に利用されます。
 IPsecはプロトコル群の総称であり、認証、暗号化、鍵交換などの複数のプロトコルを含みます。
 そのうち、認証を担うプロトコルがAH(Authentication Header)、認証と暗号化を担うプロトコルがESP(Encapsulated Security Payload)です。
 
-
-**S/MIME**  
+### S/MIME
 Secure MIMEの略。
 公開鍵暗号技術を使用して「認証」「改ざん検出」「暗号化」などの機能を電子メールソフトに提供する規格です。
 
-
-**SMTP-AUTH**  
+### SMTP-AUTH
 送信側のメールサーバで送信者を認証する仕組みです。
 
-
-**SSH**  
+### SSH
 Secure Shellの略。
 公開鍵暗号や認証の技術を利用して、安全にリモートコンピュータと通信するためのプロトコルです。
 
@@ -521,6 +503,7 @@ BIOSに代わる新仕様であるUEFI(Unified Extensible Firmware Interface)で
 
 ---
 
+## 1回目に間違えた問題
 
 組織的なインシデント対応体制の構築や運用を支援する目的でJPCERT/CCが作成したものはどれか
 →
