--- a/BasicInformation/とにかく.md
+++ b/BasicInformation/とにかく.md
@@ -47,6 +47,12 @@
 
 まぁここまでしなくても、0.5ナノ求めたらそれに5掛けるだけで済むけどね。  
 
+
+クロック周波数 / 平均クロック数
+これで1秒間の命令実行回数がわかる。
+まとめておこう。
+
+
 ## 1クロック何秒か？
 
 1/10^9すればいいので1ナノ秒(10^-9)  
