--- a/BasicInformation/午前/2週目重点.md
+++ b/BasicInformation/午前/2週目重点.md
@@ -709,11 +709,205 @@ D 1110 1110 0000(224) ~ 1110 1111(239)
 ---
 
 
-2021/10/07 Thu
+2021/10/08 Fri
 
 
 **平成26年春期　問10**
 主記憶のアクセス時間60ナノ秒，キャッシュメモリのアクセス時間10ナノ秒のシステムがある。キャッシュメモリを介して主記憶にアクセスする場合の実効アクセス時間が15ナノ秒であるとき，キャッシュメモリのヒット率は幾らか。
+→
+これはヒット率の公式を使えばいける。
+
+15 = (1-n)60 + 10n
+
+
+
+**平成26年春期　問16**
+ページング方式の仮想記憶を用いることによる効果はどれか。
+→
+そうだ・・・。昔も同じこと考えて間違えた気がする・・・。
+ページというひとまとまりのサイズでプログラムの使う部分と使わない部分をうまいことやってってのは、わかりそうで、で読んだのだが、それを答えに落とし込むことが出来なかった。  
+改めて見てみたら違った・・・。別の奴だった。
+→  
+ページング方式は、仮想記憶管理方式の一つで仮想アドレス空間を「ページ」と呼ばれる固定長の区画に分割，同時に主記憶上も同じように固定長に分割して、このページ単位で主記憶と補助記憶装置のアドレス変換を行う方式です。
+→  
+処理に必要なページを動的に主記憶に割り当てることによって，主記憶を効率的に使用できる。
+→  
+正しい。ページング方式ではプログラムに割り当てるメモリが連続である必要がなく、大きなフラグメンテーションがほとんど発生しないため、メモリを無駄にしないというメリットがあります。
+
+[わかりそう](https://wa3.i-3-i.info/word13352.html)  
+
+
+**平成29年秋期　問72**
+MRPの特徴はどれか。
+→
+顧客の注文を受けてから製品の生産を行う。
+作業指示票を利用して作業指示，運搬指示をする。
+製品の開発，設計，生産準備を同時並行で行う。
+製品の基準生産計画を基に，部品の手配数量を算出する。
+→
+1はBPOとかそんな感じの奴。
+2は看板方式。
+3はコンカレントエンジニアリング。
+消去法で4。
+→  
+MRP(Materials Requirements Planning)は、日本語では資材所要量計画と呼ばれ、部品表と生産計画をもとに必要な資材の所要量を求め、これを基準に在庫，発注，納入の管理を支援する計画方式、またはそれを実現するシステムです。
+製品に組み込まれる部品の構成や、それぞれの部品ごとの使用量、製造リードタイム、発注リードタイムをもとに、すべての製品の需要に対応した個々の部品の必要量、製造指示日、発注指示日を決めるというように、その製品の生産に必要な部品の発注量をコンピュータで算出することを目的としています。
+
+
+
+**平成30年秋期　問9**
+動作クロック周波数が700MHzのCPUで，命令の実行に必要なクロック数とその命令の出現率が表に示す値である場合，このCPUの性能は約何MIPSか。
+→  
+1Gで1000MIPS。
+700MHzだから700MIPSあたり。
+後は確立と必要クロック数で計算する。
+
+700/4 * 0.3 + 700/8 * 0.6 + 700/10 * 0.1
+= 175 * 0.3 + 87.5 * 0.6 + 7
+= 
+
+やったはずなのに全然わからんかった・・・。
+やっぱり計算は苦手だな。
+→  
+まず1命令を実行するのに必要な平均クロック数を求めます。
+
+各命令を実行するのに必要なクロック数に、出現率を乗じたものを足し合わせて、
+
+　(4×0.3)＋(8×0.6)＋(10×0.1)
+＝1.2＋4.8＋1.0＝7.0
+
+この計算結果から、1命令に必要な平均クロック数は7クロックであるとわかります。
+
+CPUの動作クロック数が700MHzなので、1秒間の命令実行可能回数は、
+
+　700×10^6÷7＝100×10^6回
+
+MIPSは1秒間に実行できる命令数を百万単位で表す指標なので、このCPUの性能は100MIPSになります。
+
+クロック周波数 / 平均クロック数
+これで1秒間の命令実行回数がわかる。
+まとめておこう。
+
+
+
+**平成28年秋期　問66**  
+RFIに回答した各ベンダに対してRFPを提示した。今後のベンダ選定に当たって，公正に手続を進めるためにあらかじめ実施しておくことはどれか。
+→  
+RFP(Request for Proposal，提案依頼書)は、情報システムの調達を予定している企業・組織が、発注先候補のITベンダに対して具体的なシステム提案をするように求めること、またはそれらのシステム要件や調達要件を取りまとめた文書をいいます。
+→
+「提案の評価基準や要求事項の適合度への重み付けをするルールを設けるなど，選定の手順を確立しておく。」
+正しい。取得者側はRFPの発行にあたり、提案書の評価基準や要求事項適合度の重み付けを含めて、ベンダ選択の手順を確立しておくことが望ましいとされています。
+
+普通に考えてこれしかない。
+なぜ間違えたのか。  
+
+「ベンダ選定後，迅速に契約締結をするために，RFPを提示した全ベンダに内示書を発行して，契約書や作業範囲記述書の作成を依頼しておく。」
+契約交渉におけるユーザとベンダのパワーバランスは、特定のベンダーに内示を与えた時点で、ベンダ側に大きく有利に傾いていまいます。公正な手続きのためには内示書を発行すべきではありません。
+
+
+
+**平成29年春期　問60**  
+システム監査の実施体制に関する記述のうち，適切なものはどれか。  
+→  
+「監査依頼者が監査報告に基づく改善指示を行えるように，システム監査人は監査結果を監査依頼者に報告する。」
+正しい。システム監査基準では監査報告書の提出と開示 について「実施した監査の目的に応じた適切な形式の監査報告書を作成し、遅滞なく監査の依頼者に提出しなければならない。」と定めています。
+
+「システム監査人が他の専門家の支援を受ける場合には，支援の範囲・方法，及び監査結果の判断などは，ほかの専門家の責任において行う。」
+システム監査人の責任において行います。
+システム監査基準では「他の専門職による支援を仰ぐ場合であっても、利用の範囲、方法、及び結果の判断等は、システム監査人の責任において行われなければならない。 」と定めています。
+
+→  
+普通に考えて報告の義務はあるだろう。  
+専門家の判断を仰いでも、最終的な判断はシステム監査人の責任において行う必要がある。  
+後は、自分が所属する部門の監査は独立性の観点から見て不適切。  
+
+
+
+**平成27年春期　問36**
+IPv4のグローバルIPアドレスはどれか。
+118.151.146.138
+127.158.32.134
+172.22.151.43
+192.168.38.158
+
+→
+最近復習した。
+各アドレスのプライベートアドレス範囲に入ってない奴は118しかないのでそれがグローバル。  
+
+127はクラスAではなく、ローカルループバックアドレスになる。  
+
+
+
+8.
+**平成27年春期　問66**
+共通フレームによれば，企画プロセスで定義するものはどれか。
+→
+共通フレームでは、企画プロセスの目的を次のように説明しています。
+
+「企画プロセスの目的は、経営事業の目的、目標を達成するために必要なシステムに関係する要求事項の集合とシステム化の方針、及びシステムを実現するための実施計画を得ることである。」
+企画プロセスが実施されると、経営層及び各部門からシステムに関係する要求事項が集められ、システム化の範囲などの基本的なアーキテクチャが定義されることになります。
+
+新しい業務の在り方や業務手順，入出力情報，業務を実施する上での責任と権限，業務上のルールや制約などの要求事項
+要件定義プロセスの「業務要件の定義」で定義する事項です。
+
+業務要件を実現するために必要なシステムの機能や，システムの開発方式，システムの運用手順，障害復旧時間などの要求事項
+要件定義プロセスの「機能要件／非機能要件の定義」で定義する事項です。
+
+経営・事業の目的，目標を達成するために必要なシステムに関係する経営上のニーズ，システム化，システム改善を必要とする業務上の課題などの要求事項
+正しい。企画プロセスで定義するものです。
+
+システムを構成するソフトウェアの機能及び，能力，動作のための環境条件，外部インタフェース，運用及び保守の方法などの要求事項
+開発プロセスの「システム要件定義」で定義する事項です。
+
+規格プロセスも後でまとめる必要ありだな。
+
+
+
+9.
+**平成27年春期　問79**
+刑法における，いわゆるコンピュータウイルスに関する罪となるものはどれか。
+→
+意図的に危害を加える意志があったこと。  
+微妙に違った。正当な理由がない。他人のPCで実行させる。だった。  
+まぁ、ぼんやりとだが覚えていた。  
+→
+コンピュータウイルスに関する罪は、正式名称を「不正指令電磁的記録に関する罪」といい2011年7月より施行された法律です。
+
+この罪では、正当な理由がなく他人のコンピュータで実行させる目的で、「ウイルスのプログラム」や「ウイルスのソースコード等が記述された電磁的記録・媒体」を作成・提供・保管した場合に罰せられます。
+
+
+
+10.
+**平成26年秋期　問23**  
+家庭用の100V電源で動作し，運転中に10Aの電流が流れる機器を，図のとおりに0分から120分まで運転した。このとき消費する電力量は何Whか。ここで，電圧及び電流の値は実効値であり，停止時に電流は流れないものとする。また，力率は1とする。
+→
+普通に考えれば、これしかないのだが、当時の俺は間違えたのだろうか。
+→
+
+中学理科の復習になってしまいますが、電流(A)・電圧(V)・電力(W)の間には以下の関係式が成り立ちます。
+
+A×V＝W
+
+電力は電流と電圧の積で表されます。また答えの単位である「Wh」は、電力量の単位で1Wの電力を1時間使用した場合すると1Whになります。
+
+　電力量＝W×使用時間
+
+次に設問にある力率とは、流れる電流が実際に機器で使用された割合を示す数値です。この設問では力率が1(100%)で、流れた電流の全てが機器で消費されるという条件なので計算上は特に考慮する必要ありません。
+
+上記を踏まえて設問に戻ります。機器で使用する電力が
+
+　10A×100V＝1000W
+
+図を見ると、通電している時間が1.5時間とわかるので
+
+　電力量(Wh)＝1000W×1.5時間＝1500
+
+消費する電力量は1500Whが適切です。
+
+
+
+
+
 
 
 
