--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -415,16 +415,7 @@ AND TemplateName = 'RN3.Wpf.Front.CheckOut.SettlementH.rdlx'
 ・C# 配列
 ・Javaジェネリック
 ・バニラのWPFで最小のMVVMサンプルを作ってみたい
-
-
-
-ちょっと前まであんなにうれしかったのに、もううれしくなくなった。
-一度できてしまえばこんなものか。
-
-今日も意外と駄目な日かもな。
-朝はあんなに気分が良くてプログラムをきれいにすることにわくわくしてたのに。
-
-まぁ、台無しにしたのは自分だけどね。
-まーーたこれか。嫌になっちゃうなぁー。
-
+・LRU
+・インスタンスがどうのこうのも調べたい。
+・スタティックって結局何なのかもまとめたい。
 
