10月9日会社分

--- a/BasicInformation/とにかく.md
+++ b/BasicInformation/とにかく.md
@@ -393,3 +393,79 @@ PMBOKによればプロジェクトにマイナスの影響を与えるリスク
 
 順序的には全体最適化計画を立案して、あるべき姿はわかったとして、じゃあどうやって開発するってのを計画するのがこの段階な気がするなぁ。  
 てか、順序的にそれ以外ないでしょ。  
+
+---
+
+## プレジデンス・ダイアグラム
+
+[プレシデンス・ダイアグラム法とは何か？PMPにでてくるPMBOKの用語を解説](https://ssaits.jp/promapedia/method/pdm.html)  
+
+なんか4つあるやつ。  
+何故かまとめてなかったのでここでまとめる。  
+
+プロジェクトの依存関係に注目して論理的順序関係を図式化していく手法。  
+
+・終了-開始関係(FS)  
+・終了-終了関係(FF)  
+・開始-開始関係(SS)  
+・開始-終了関係(SF)  
+
+関係的には前のプロジェクトと後のプロジェクトの関係になる。  
+
+前のプロジェクトが終わらないと後のプロジェクトが開始できない。
+前のプロジェクトが終わらないと後のプロジェクトを終了できない。
+前のプロジェクトが開始されないと後のプロジェクトを開始できない。
+前のプロジェクトが開始されないと後のプロジェクトを終了できない。
+
+転じて、
+
+前のプロジェクトが終わったら後のプロジェクトが始まる。
+前のプロジェクトが終わったら後のプロジェクトがも終わる。
+前のプロジェクトが始まったら後のプロジェクトも始まる。
+前のプロジェクトが始まったら後のプロジェクトが終わる。
+
+って言い換えることができる。  
+つまるところ、文字が全ての関係を表しているという訳。  
+開始、終了の順番に応じた答えを選べば間違いはない。  
+因みにほとんどはFS関係にある。
+設計が終わらないとプログラミングができないみたいなそんな感じ。  
+以下解説全文  
+
+終了 – 開始関係（FS）
+終了 – 開始関係（以下、FSと略記）とは、先行しているアクティビティが完了するまで、後続のアクティビティが開始できない関係を表しています。
+例えば、「設計」と「開発」の関係であったり、「開発」と「テスト」の関係であったりと、スケジュール上のほとんどのアクティビティがこのFSの関係にあります。
+これからプレシデンス・ダイアグラム法を使って、アクティビティの順序を整理し、ネットワーク図を書いたり、クリティカル・パスの確認などを行っていきますが、こうした分析をする上でもこのFSの関係さえ理解していたら十分でしょう。
+
+終了 – 終了関係（FF）
+終了 – 終了関係（以下、FFと略記）は先行するアクティビティが完了するまで、後続のアクティビティを終了させることができない関係を表しています。
+例えば、「スケジュールの監視」というアクティビティは、スケジュールの作成が完了しても完了することはありません。多くのアクティビティと並行して活動し、多くの場合、プロダクトが完成した時点で「スケジュールの監視」も完了となります。
+このように、何かのアクティビティが終わってようやく完了するアクティビティを、FFの関係であると言います。
+
+開始 – 開始関係（SS）
+開始 – 開始関係（以下、SSの関係）は先行するアクティビティを開始するまで、後続のアクティビティを開始することができない関係を表しています。
+例えば、ITプロジェクトでいえば設計がはじまらなければ、テスト項目の検討をスタートすることができません。こうした関係をSSと呼びます。
+ただし、このSSの関係のアクティビティがあったとしても、何かのアクティビティが完了したら同時にスタートさせるというFSの関係にしたほうが、アクティビティの順序を整理しやすいかもしれません。
+先ほどの設計とテスト項目の検討の関係だと、さらに先行する要件定義のアクティビティが完了したら、同時に開始するという関係に置き換えたほうが良いかもしれません。
+
+開始 – 終了関係（SF）
+開始 – 終了関係（以下、SFの関係）は先行するアクティビティを開始するまで、後続のアクティビティを完了させることができない関係を表しています。
+例えば、Webサイトをリニューアルする際、念のため、昔のサイトのバックアップをテストサイトとして残しておき、万が一公開作業に失敗したらすぐに切り替えられるようにすることがあります。この「テストサイトの維持」というのは、「リニューアルの公開作業」というアクティビティが開始した時に始められ、「リニューアルの公開作業」の終了とともに役割を終えます。こうした関係がSFの関係です。
+
+---
+
+## 結局のところ、第1正規系と第2正規系と第3正規系って何が違うの？
+
+第1正規系はわかる。  
+正規化される前の状態はレコードが重複しまくって、データベースに格納できない状態だから、その重複を解消するのが第1正規系で行うこと。  
+正直、この状態は試験ではまず出ない。対策するなら第2正規系と第3正規系の一番微妙な間をやるべし。  
+
+第3正規系はマスターとしてまとまってる状態ではなかろうか。  
+主キーで一意に決まる状態にそれぞれ分離されたやつ。  
+少なくとも、データベースを設計するならここまでやらないと不十分って状態。  
+データを参照する際はテーブルを結合しまくってようやくデータが出来上がるって状態にまで分離された状態。  
+
+第1と第3がわかれば、第2もなんとなくわかってくるのでは？  
+正直、第2正規系が一番微妙なのだが、「これマスターとして分離できるよな？」ってのがあれば第2正規系どまりといえるのではないだろうか。  
+次にデータベースの問題をやるなら、そういう点に着目してやってみようかね。  
+
+まぁ、ざっくりとしたイメージ、上に行くほ重複もなくなって、テーブルとして独立していくって考えればいいんじゃないでしょうかね。  
